--- a/style.css
+++ b/style.css
@@ -1,40 +1,49 @@
-.box{
-    width: 500px;
-    height: 250px;
-    border: 1px solid black;
-    background-color: blueviolet;
-    color: white;
+body {
+  background-image: url(gif/unnamed.gif);
+  background-repeat: no-repeat;
+  background-size: 100% 99.95vh;
 }
-.box>label{
-    font-size: 22px;
+.box {
+  width: 500px;
+  height: 350px;
+  border: 1px solid black;
+  background-color: blueviolet;
+  color: white;
 }
-.box>label>input{
-    width: 98%;
-    height: 30px;
+.box > label {
+  font-size: 22px;
 }
-.box>button{
-    width: 150px;
-    height: 40px;
-    margin-top: 10px;
-    margin-left: 150px;
+.box > label > input {
+  width: 98%;
+  height: 30px;
+}
+.box > button {
+  width: 150px;
+  height: 40px;
+  margin-top: 10px;
+  margin-left: 150px;
 }
 
 .btn {
-  --b: 3px;   /* border thickness */
-  --s: .45em; /* size of the corner */
-  --color: #373B44;
-  
-  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  --b: 3px; /* border thickness */
+  --s: 0.45em; /* size of the corner */
+  --color: #373b44;
+
+  padding: calc(0.5em + var(--s)) calc(0.9em + var(--s));
   color: var(--color);
   --_p: var(--s);
-  background:
-    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
-    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
-  transition: .3s linear, color 0s, background-color 0s;
+  background: conic-gradient(
+      from 90deg at var(--b) var(--b),
+      #0000 90deg,
+      var(--color) 0
+    )
+    var(--_p) var(--_p) / calc(100% - var(--b) - 2 * var(--_p))
+    calc(100% - var(--b) - 2 * var(--_p));
+  transition: 0.3s linear, color 0s, background-color 0s;
   outline: var(--b) solid #0000;
-  outline-offset: .6em;
+  outline-offset: 0.6em;
   font-size: 14px;
-    color: white;
+  color: white;
   border: 0;
 
   user-select: none;
@@ -43,14 +52,57 @@
 }
 
 .btn:hover,
-.btn:focus-visible{
+.btn:focus-visible {
   --_p: 0px;
   outline-color: var(--color);
-  outline-offset: .05em;
+  outline-offset: 0.05em;
   font-size: 18px;
 }
 
 .btn:active {
   background: rgb(255, 0, 0);
   color: #fff;
+}
+.threeangel {
+  width: 450px;
+  height: 400px;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  background: rgba(255, 255, 255, 0.38);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.3px);
+  -webkit-backdrop-filter: blur(6.3px);
+  border: 1px solid rgba(255, 255, 255, 1);
+  margin: -200px auto;
+  color: #fff;
+  text-align: center;
+
+}
+.threeangel>h2:first-child{
+  margin-top: 150px;
+}
+.a_tomon{
+  color: #fff;
+  font-size: 40px;
+  display: inline-block;
+  position: absolute;
+  top: 300px;
+  left: 800px;
+  transform: rotate(-60deg);
+}
+.b_tomon{
+  color: #fff;
+  font-size: 40px;
+  display: inline-block;
+  position: absolute;
+  top: 300px;
+  right: 800px;
+  transform: rotate(60deg);
+}
+.c_tomon{
+  color: #fff;
+  font-size: 40px;
+  display: inline-block;
+  position: absolute;
+  top: 520px;
+  right: 950px;
 }
